# naver-blog-crawler

./: .gitignore  README.md  app.py  new.json  pyproject.toml
components/: add_travel.py  deepl.py  get_store_and_address.py  naver_crawler.py  naver_rss.py  supabase.py  translation_counter.py  uploader.py
tests/: test_app.py
